Updates: - Email template

--- a/assets/email-template.html
+++ b/assets/email-template.html
@@ -24,8 +24,8 @@
             <table align="center" border="0" cellpadding="0" cellspacing="0" width="100%">
                 <tr>
                     <td style="padding: 40px 15px 20px;">
-                        <a href="http://mamgabon.alexandre-kaze.com/">
-                            <img src="http://mamgabon.alexandre-kaze.com/src/img/logo.png" style="display: block; margin: 0 auto" height="200" alt="logo GabWays">
+                        <a href="http://mamgabon.com/" target="_blank">
+                            <img src="http://mamgabon.com/uploads/logos/5adaa5e14e6b1.png" style="display: block; margin: 0 auto" height="200" alt="logo GabWays">
                         </a>
                     </td>
                 </tr>
@@ -69,15 +69,6 @@
                         &copy; <a href="#" style="text-decoration: none; color: inherit">2018 Mommy & Me</a>
                     </td>
 
-                </tr>
-                <tr>
-                    <td style="text-align: center">
-                        <a href="https://facebook.com" style="padding: 10px"><img src="http://integration.gabways.com/img/social/facebook.png" width="15" alt="facebook"></a>
-
-                        <a href="https://twitter.com" style="padding: 10px"><img src="http://integration.gabways.com/img/social/twitter.png" width="15" alt="facebook"></a>
-
-                        <a href="https://youtube.com" style="padding: 10px"><img src="http://integration.gabways.com/img/social/youtube.png" width="15" alt="facebook"></a>
-                    </td>
                 </tr>
             </table>
         </td>
