--- a/assets/email-template.html
+++ b/assets/email-template.html
@@ -35,7 +35,23 @@
 
     <tr>
         <td style="padding: 15px">
-            <h1 style="font-size: 24px ;margin: 0 0 0 0; color: #fb7660">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h1>
+            <h1 style="font-size: x-large ;margin: 15px 0; text-align: center; color: #f39383">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h1>
+        </td>
+    </tr>
+    <tr>
+        <td style="border-bottom: solid 2px #ddd; border-top: solid 2px #ddd; padding: 10px 10px">
+            <table cellpadding="2" cellspacing="0">
+                <tr>
+                    <td>
+                        <img src="C:\wamp64\www\mamgabon\src\img\IDcard.png" alt="IDCard" style="display: block">
+                    </td>
+                    <td style="color: #5c6468">
+                        <span style="font-weight: 700; color: #89b1d5; font-size: large">Nom de l'expéditeur</span> <br>
+                        expediteur@adresse-mail.com <br>
+                        +241 11 22 33 44
+                    </td>
+                </tr>
+            </table>
         </td>
     </tr>
     <tr>
@@ -46,13 +62,13 @@
             <table align="center" border="0" cellpadding="0" cellspacing="0" width="100%">
                 <tr>
                     <td valign="top" width="50%" style="padding: 15px 15px 15px 0">
-                        <h3 style="color: #af1e27">Colonne 1</h3>
+                        <h3 style="color: #f39383">Colonne 1</h3>
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                         <br>
-                        <a href="#" style="display: inline-block; width: auto; margin: 10px auto 10px auto; padding: 10px 15px 10px 15px; background-color: #af1e27; color: #fff; text-decoration: none; font-weight: bold">Bouton simple</a>
+                        <a href="#" style="display: inline-block; width: auto; margin: 10px auto 10px auto; padding: 10px 15px 10px 15px; background-color: #89b1d5; color: #fff; text-decoration: none; font-weight: bold">Bouton simple</a>
                     </td>
                     <td valign="top" width="50%" style="padding: 15px 0 15px 15px">
-                        <h3 style="color: #af1e27">Colonne 2</h3>
+                        <h3 style="color: #f39383">Colonne 2</h3>
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi cupiditate dolorem dolores, ex facilis hic inventore, ipsa itaque nesciunt, nihil nisi non placeat possimus quasi qui repellat totam unde voluptatum!
                     </td>
                 </tr>
